kubewarden/C0002-container-liveness-probe/policy-C0002.yaml
# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: portefaix-C0002
  annotations:
    io.kubewarden.policy.title: Container must set liveness probe
    io.kubewarden.policy.category: Best Practices
    io.kubewarden.policy.severity: high
    io.kubewarden.policy.subject: Container
    io.kubewarden.policy.description: >-
      Liveness probe need to be configured to correctly manage a pods
      lifecycle during deployments, restarts, and upgrades. For each pod,
      a periodic `livenessProbe` is performed by the kubelet to determine
      if the pod's containers are running or need to be restarted
spec:
  module: registry://ghcr.io/nlamirault/kubewarden-policies/probes-policy:v0.1.0
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations:
      - CREATE
      - UPDATE
  mutating: false
  settings:
    denied_labels: []
    mandatory_labels:
    - app.kubernetes.io/name
    - app.kubernetes.io/instance
    - app.kubernetes.io/version
    - app.kubernetes.io/component
    - app.kubernetes.io/part-of
    - app.kubernetes.io/managed-by
    constrained_labels: []
